src/nationalarchives/utilities/_a11y.scss
@use "../tools/a11y";

.tna-visually-hidden,
.tna-\!--visually-hidden {
  @include a11y.visually-hidden;
}

*:focus-visible {
  z-index: 9;

  @include a11y.focus-outline;
}

@supports not selector(:focus-visible) {
  *:focus {
    z-index: 9;

    @include a11y.focus-outline;
  }
}

a,
button,
input,
textarea,
select,
summary {
  &:active {
    @include a11y.active-outline;
  }
}

.tna-\!--no-focus-style,
*[tabindex="-1"] {
  *:focus-visible,
  &:focus {
    @include a11y.no-focus-outline;
  }
}

